--- a/fyncol-client/src/index.css
+++ b/fyncol-client/src/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Sora:wght@400;600;800&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Ajuste para suavizar fuentes en Safari/Mac (muy importante para el look "premium") */
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
